--- a/hierarchical-classification.ipynb
+++ b/hierarchical-classification.ipynb
@@ -20,9 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing import load_and_prepare_model, run_predict\n",
+    "from preprocessing import load_and_prepare_model, temperature_scaled_softmax\n",
     "import random\n",
-    "import os"
+    "import os\n",
+    "import torch\n",
+    "from ultralytics.utils import ops\n",
+    "import numpy as np\n",
+    "from ultralytics.utils.tal import dist2bbox"
    ]
   },
   {
@@ -179,25 +183,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "WARNING ⚠️ NMS time limit 0.550s exceeded\n",
-      "image 1/1 /mnt/RAID/datasets/label-studio/fjord/images/frame013780.jpg: 640x576 1 ulva intestinalis, 1 urospora, 1 zostera marina, 331.0ms\n",
-      "Speed: 12.0ms preprocess, 331.0ms inference, 1758.8ms postprocess per image at shape (1, 3, 640, 576)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the model with random weights\n",
     "random.seed(133745)\n",
     "IMGDIR_PATH = \"/mnt/RAID/datasets/label-studio/fjord/images/\"\n",
     "imgpath = IMGDIR_PATH + random.choice(os.listdir(IMGDIR_PATH))\n",
-    "model, hooks = load_and_prepare_model(\"runs/segment/Yolov8n-seg-train/weights/best.pt\")\n",
-    "results = run_predict(imgpath, model, hooks, score_threshold=0.5, iou_threshold=0.7)"
+    "model, hooks = load_and_prepare_model(\"runs/segment/Yolov8n-seg-train/weights/best.pt\")"
    ]
   },
   {
@@ -206,38 +198,109 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING ⚠️ NMS time limit 0.550s exceeded\n",
+      "image 1/1 /mnt/RAID/datasets/label-studio/fjord/images/frame013780.jpg: 640x576 1 ulva intestinalis, 1 urospora, 1 zostera marina, 347.2ms\n",
+      "Speed: 10.2ms preprocess, 347.2ms inference, 1924.5ms postprocess per image at shape (1, 3, 640, 576)\n"
+     ]
     }
    ],
    "source": [
-    "len(results)"
+    "# Unpack hooks from load_and_prepare_model()\n",
+    "input_hook, detect, detect_hook, cv2_hooks, cv3_hooks = hooks\n",
+    "\n",
+    "# Run inference\n",
+    "model(imgpath)\n",
+    "\n",
+    "# Reverse engineer the outputs to find the logits\n",
+    "shape = detect_hook.input[0][0].shape  # BCHW\n",
+    "x = []\n",
+    "for i in range(detect.nl):\n",
+    "    x.append(torch.cat((cv2_hooks[i].output, cv3_hooks[i].output), 1))\n",
+    "x_cat = torch.cat([xi.view(shape[0], detect.no, -1) for xi in x], 2)\n",
+    "box, cls = x_cat.split((detect.reg_max * 4, detect.nc), 1)\n",
+    "\n",
+    "# Batch size assumed to be 1\n",
+    "batch_idx = 0\n",
+    "dbox = dist2bbox(detect.dfl(box), detect.anchors.unsqueeze(0), xywh=True, dim=1) * detect.strides\n",
+    "cls = cls[batch_idx].sigmoid()\n",
+    "\n",
+    "# Figure out the original img shape and model img shape to transform the boxes\n",
+    "img_shape = input_hook.input[0].shape[2:]\n",
+    "orig_img_shape = model.predictor.batch[1][batch_idx].shape[:2]\n",
+    "\n",
+    "# Compute predictions\n",
+    "boxes = []\n",
+    "for i in range(dbox.shape[2]):  # Iterate over the third dimension (num_boxes)\n",
+    "    x0, y0, x1, y1 = dbox[0, :, i]  # Access all 4 coordinates for the i-th box\n",
+    "    x0, y0, x1, y1 = ops.scale_boxes(img_shape, np.array([x0.cpu(), y0.cpu(), x1.cpu(), y1.cpu()]), orig_img_shape)\n",
+    "    \n",
+    "    boxes.append({\n",
+    "        'image_id': imgpath,\n",
+    "        'bbox': [x0.item(), y0.item(), x1.item(), y1.item()],  # xyxy\n",
+    "        'bbox_xcycwh': [(x0.item() + x1.item())/2, (y0.item() + y1.item())/2, x1.item() - x0.item(), y1.item() - y0.item()],\n",
+    "        'logits': cls[:, i].tolist()\n",
+    "    })\n",
+    "\n",
+    "# Prepare boxes for NMS\n",
+    "boxes_for_nms = torch.stack([\n",
+    "    torch.tensor([*b['bbox_xcycwh'], *b['logits']]) for b in boxes\n",
+    "], dim=1).unsqueeze(0)\n",
+    "\n",
+    "nms_results = ops.non_max_suppression(boxes_for_nms, conf_thres=0.5, iou_thres=0.7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "tensor([[115.4882, 566.1431, 217.5803, 104.9672,   0.9614,  12.0000],\n",
+       "        [115.1407, 566.0378, 217.6956, 105.0155,   0.9592,  12.0000],\n",
+       "        [115.3218, 566.2609, 217.5932, 104.8498,   0.9545,  12.0000],\n",
+       "        [115.3655, 565.9752, 217.3923, 105.2337,   0.9542,  12.0000],\n",
+       "        [114.9085, 565.8546, 219.3447, 105.7377,   0.9503,  12.0000],\n",
+       "        [115.2561, 566.1831, 217.0498, 104.6300,   0.9502,  12.0000],\n",
+       "        [115.4984, 566.3156, 217.3478, 104.6519,   0.9489,  12.0000],\n",
+       "        [115.2101, 566.1779, 218.1667, 104.8736,   0.9484,  12.0000],\n",
+       "        [115.4393, 566.3303, 217.4231, 104.6662,   0.9439,  12.0000],\n",
+       "        [115.4363, 566.1382, 217.5255, 105.2556,   0.9387,  12.0000],\n",
+       "        [448.7006, 515.2203, 158.2852,  68.5182,   0.9295,  11.0000],\n",
+       "        [448.9079, 515.2396, 157.7410,  68.7162,   0.9277,  11.0000],\n",
+       "        [448.5760, 515.3473, 158.1650,  68.8945,   0.9271,  11.0000],\n",
+       "        [448.6293, 515.1596, 156.5981,  68.7595,   0.9154,  11.0000],\n",
+       "        [448.5184, 515.3426, 158.7338,  68.1760,   0.9113,  11.0000],\n",
+       "        [448.7275, 515.1409, 156.3502,  68.9160,   0.9065,  11.0000],\n",
+       "        [448.9284, 515.0906, 155.6393,  68.8160,   0.9046,  11.0000],\n",
+       "        [449.0101, 515.4280, 159.7861,  68.2176,   0.8971,  11.0000],\n",
+       "        [448.7107, 515.1476, 158.8194,  68.3055,   0.8959,  11.0000],\n",
+       "        [448.5585, 514.9754, 157.1487,  69.5820,   0.8696,  11.0000],\n",
+       "        [305.1834, 379.1616, 145.3463, 464.1260,   0.7214,  10.0000],\n",
+       "        [305.4929, 379.1700, 145.8737, 464.0777,   0.7193,  10.0000],\n",
+       "        [305.6512, 348.2013, 144.8302, 463.9238,   0.7151,  10.0000],\n",
+       "        [305.5853, 363.7354, 144.9988, 463.7416,   0.7098,  10.0000],\n",
+       "        [305.3640, 363.6829, 145.2936, 464.0750,   0.7073,  10.0000],\n",
+       "        [305.7142, 348.1847, 144.9458, 464.0642,   0.7027,  10.0000],\n",
+       "        [305.8319, 348.2055, 146.1472, 464.0476,   0.7025,  10.0000],\n",
+       "        [305.6541, 363.7078, 145.2022, 463.9349,   0.6882,  10.0000],\n",
+       "        [305.2578, 379.1743, 146.1300, 464.0868,   0.6690,  10.0000],\n",
+       "        [305.4788, 363.6947, 146.3058, 464.0644,   0.6586,  10.0000]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(results[0]['activations'])"
+    "\n",
+    "nms_results[0]"
    ]
   }
  ],
