--- a/hierarchical-classification.ipynb
+++ b/hierarchical-classification.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -202,9 +202,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "WARNING ⚠️ NMS time limit 0.550s exceeded\n",
-      "image 1/1 /mnt/RAID/datasets/label-studio/fjord/images/frame013780.jpg: 640x576 1 ulva intestinalis, 1 urospora, 1 zostera marina, 347.2ms\n",
-      "Speed: 10.2ms preprocess, 347.2ms inference, 1924.5ms postprocess per image at shape (1, 3, 640, 576)\n"
+      "image 1/1 /mnt/RAID/datasets/label-studio/fjord/images/frame013780.jpg: 640x576 1 ulva intestinalis, 1 urospora, 1 zostera marina, 13.7ms\n",
+      "Speed: 19.5ms preprocess, 13.7ms inference, 4.7ms postprocess per image at shape (1, 3, 640, 576)\n"
      ]
     }
    ],
@@ -213,7 +212,7 @@
     "input_hook, detect, detect_hook, cv2_hooks, cv3_hooks = hooks\n",
     "\n",
     "# Run inference\n",
-    "model(imgpath)\n",
+    "results = model(imgpath)\n",
     "\n",
     "# Reverse engineer the outputs to find the logits\n",
     "shape = detect_hook.input[0][0].shape  # BCHW\n",
@@ -236,70 +235,72 @@
     "boxes = []\n",
     "for i in range(dbox.shape[2]):  # Iterate over the third dimension (num_boxes)\n",
     "    x0, y0, x1, y1 = dbox[0, :, i]  # Access all 4 coordinates for the i-th box\n",
-    "    x0, y0, x1, y1 = ops.scale_boxes(img_shape, np.array([x0.cpu(), y0.cpu(), x1.cpu(), y1.cpu()]), orig_img_shape)\n",
     "    \n",
     "    boxes.append({\n",
     "        'image_id': imgpath,\n",
     "        'bbox': [x0.item(), y0.item(), x1.item(), y1.item()],  # xyxy\n",
-    "        'bbox_xcycwh': [(x0.item() + x1.item())/2, (y0.item() + y1.item())/2, x1.item() - x0.item(), y1.item() - y0.item()],\n",
     "        'logits': cls[:, i].tolist()\n",
     "    })\n",
     "\n",
     "# Prepare boxes for NMS\n",
     "boxes_for_nms = torch.stack([\n",
-    "    torch.tensor([*b['bbox_xcycwh'], *b['logits']]) for b in boxes\n",
+    "    torch.tensor([*b['bbox'], *b['logits']]) for b in boxes\n",
     "], dim=1).unsqueeze(0)\n",
     "\n",
-    "nms_results = ops.non_max_suppression(boxes_for_nms, conf_thres=0.5, iou_thres=0.7)"
+    "nms_results = ops.non_max_suppression(boxes_for_nms, conf_thres=0.25, iou_thres=0.7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[115.4882, 566.1431, 217.5803, 104.9672,   0.9614,  12.0000],\n",
-       "        [115.1407, 566.0378, 217.6956, 105.0155,   0.9592,  12.0000],\n",
-       "        [115.3218, 566.2609, 217.5932, 104.8498,   0.9545,  12.0000],\n",
-       "        [115.3655, 565.9752, 217.3923, 105.2337,   0.9542,  12.0000],\n",
-       "        [114.9085, 565.8546, 219.3447, 105.7377,   0.9503,  12.0000],\n",
-       "        [115.2561, 566.1831, 217.0498, 104.6300,   0.9502,  12.0000],\n",
-       "        [115.4984, 566.3156, 217.3478, 104.6519,   0.9489,  12.0000],\n",
-       "        [115.2101, 566.1779, 218.1667, 104.8736,   0.9484,  12.0000],\n",
-       "        [115.4393, 566.3303, 217.4231, 104.6662,   0.9439,  12.0000],\n",
-       "        [115.4363, 566.1382, 217.5255, 105.2556,   0.9387,  12.0000],\n",
-       "        [448.7006, 515.2203, 158.2852,  68.5182,   0.9295,  11.0000],\n",
-       "        [448.9079, 515.2396, 157.7410,  68.7162,   0.9277,  11.0000],\n",
-       "        [448.5760, 515.3473, 158.1650,  68.8945,   0.9271,  11.0000],\n",
-       "        [448.6293, 515.1596, 156.5981,  68.7595,   0.9154,  11.0000],\n",
-       "        [448.5184, 515.3426, 158.7338,  68.1760,   0.9113,  11.0000],\n",
-       "        [448.7275, 515.1409, 156.3502,  68.9160,   0.9065,  11.0000],\n",
-       "        [448.9284, 515.0906, 155.6393,  68.8160,   0.9046,  11.0000],\n",
-       "        [449.0101, 515.4280, 159.7861,  68.2176,   0.8971,  11.0000],\n",
-       "        [448.7107, 515.1476, 158.8194,  68.3055,   0.8959,  11.0000],\n",
-       "        [448.5585, 514.9754, 157.1487,  69.5820,   0.8696,  11.0000],\n",
-       "        [305.1834, 379.1616, 145.3463, 464.1260,   0.7214,  10.0000],\n",
-       "        [305.4929, 379.1700, 145.8737, 464.0777,   0.7193,  10.0000],\n",
-       "        [305.6512, 348.2013, 144.8302, 463.9238,   0.7151,  10.0000],\n",
-       "        [305.5853, 363.7354, 144.9988, 463.7416,   0.7098,  10.0000],\n",
-       "        [305.3640, 363.6829, 145.2936, 464.0750,   0.7073,  10.0000],\n",
-       "        [305.7142, 348.1847, 144.9458, 464.0642,   0.7027,  10.0000],\n",
-       "        [305.8319, 348.2055, 146.1472, 464.0476,   0.7025,  10.0000],\n",
-       "        [305.6541, 363.7078, 145.2022, 463.9349,   0.6882,  10.0000],\n",
-       "        [305.2578, 379.1743, 146.1300, 464.0868,   0.6690,  10.0000],\n",
-       "        [305.4788, 363.6947, 146.3058, 464.0644,   0.6586,  10.0000]])"
+       "ultralytics.engine.results.Boxes object with attributes:\n",
+       "\n",
+       "cls: tensor([12.], device='cuda:0')\n",
+       "conf: tensor([0.9614], device='cuda:0')\n",
+       "data: tensor([[  0.8949, 513.6595, 230.0815, 618.6267,   0.9614,  12.0000]], device='cuda:0')\n",
+       "id: None\n",
+       "is_track: False\n",
+       "orig_shape: (619, 534)\n",
+       "shape: torch.Size([1, 6])\n",
+       "xywh: tensor([[115.4882, 566.1431, 229.1865, 104.9672]], device='cuda:0')\n",
+       "xywhn: tensor([[0.2163, 0.9146, 0.4292, 0.1696]], device='cuda:0')\n",
+       "xyxy: tensor([[  0.8949, 513.6595, 230.0815, 618.6267]], device='cuda:0')\n",
+       "xyxyn: tensor([[0.0017, 0.8298, 0.4309, 0.9994]], device='cuda:0')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "results[0].boxes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 12.9253, 531.0857, 249.8871, 639.6140,   0.9614,  12.0000],\n",
+       "        [388.0955, 497.2781, 563.7507, 568.1208,   0.9295,  11.0000],\n",
+       "        [246.3984, 152.0890, 408.6756, 631.9608,   0.7214,  10.0000]])"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "nms_results[0]"
    ]
   }
