--- a/hierarchical-classification.ipynb
+++ b/hierarchical-classification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,12 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the model with random weights\n",
-    "random.seed(133745)\n",
     "IMGDIR_PATH = \"/mnt/RAID/datasets/label-studio/fjord/images/\"\n",
     "imgpath = IMGDIR_PATH + random.choice(os.listdir(IMGDIR_PATH))\n",
     "model, hooks = load_and_prepare_model(\"runs/segment/Yolov8n-seg-train/weights/best.pt\")"
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +200,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /mnt/RAID/datasets/label-studio/fjord/images/frame013780.jpg: 640x576 1 ulva intestinalis, 1 urospora, 1 zostera marina, 13.7ms\n",
-      "Speed: 19.5ms preprocess, 13.7ms inference, 4.7ms postprocess per image at shape (1, 3, 640, 576)\n"
+      "image 1/1 /mnt/RAID/datasets/label-studio/fjord/images/frame005273.jpg: 384x640 1 urospora, 19.2ms\n",
+      "Speed: 3.4ms preprocess, 19.2ms inference, 20.7ms postprocess per image at shape (1, 3, 384, 640)\n"
      ]
     }
    ],
@@ -235,7 +233,7 @@
     "boxes = []\n",
     "for i in range(dbox.shape[2]):  # Iterate over the third dimension (num_boxes)\n",
     "    x0, y0, x1, y1 = dbox[0, :, i]  # Access all 4 coordinates for the i-th box\n",
-    "    \n",
+    "    x0, y0, x1, y1 = ops.scale_boxes(img_shape, np.array([x0.cpu(), y0.cpu(), x1.cpu(), y1.cpu()]), orig_img_shape)\n",
     "    boxes.append({\n",
     "        'image_id': imgpath,\n",
     "        'bbox': [x0.item(), y0.item(), x1.item(), y1.item()],  # xyxy\n",
@@ -252,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -260,20 +258,20 @@
       "text/plain": [
        "ultralytics.engine.results.Boxes object with attributes:\n",
        "\n",
-       "cls: tensor([12.], device='cuda:0')\n",
-       "conf: tensor([0.9614], device='cuda:0')\n",
-       "data: tensor([[  0.8949, 513.6595, 230.0815, 618.6267,   0.9614,  12.0000]], device='cuda:0')\n",
+       "cls: tensor([11.], device='cuda:0')\n",
+       "conf: tensor([0.8621], device='cuda:0')\n",
+       "data: tensor([[9.6964e+02, 3.5041e+01, 1.5321e+03, 1.6818e+02, 8.6212e-01, 1.1000e+01]], device='cuda:0')\n",
        "id: None\n",
        "is_track: False\n",
-       "orig_shape: (619, 534)\n",
+       "orig_shape: (1080, 1920)\n",
        "shape: torch.Size([1, 6])\n",
-       "xywh: tensor([[115.4882, 566.1431, 229.1865, 104.9672]], device='cuda:0')\n",
-       "xywhn: tensor([[0.2163, 0.9146, 0.4292, 0.1696]], device='cuda:0')\n",
-       "xyxy: tensor([[  0.8949, 513.6595, 230.0815, 618.6267]], device='cuda:0')\n",
-       "xyxyn: tensor([[0.0017, 0.8298, 0.4309, 0.9994]], device='cuda:0')"
+       "xywh: tensor([[1250.8929,  101.6094,  562.5090,  133.1366]], device='cuda:0')\n",
+       "xywhn: tensor([[0.6515, 0.0941, 0.2930, 0.1233]], device='cuda:0')\n",
+       "xyxy: tensor([[ 969.6385,   35.0411, 1532.1475,  168.1776]], device='cuda:0')\n",
+       "xyxyn: tensor([[0.5050, 0.0324, 0.7980, 0.1557]], device='cuda:0')"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,18 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 12.9253, 531.0857, 249.8871, 639.6140,   0.9614,  12.0000],\n",
-       "        [388.0955, 497.2781, 563.7507, 568.1208,   0.9295,  11.0000],\n",
-       "        [246.3984, 152.0890, 408.6756, 631.9608,   0.7214,  10.0000]])"
+       "tensor([[9.6964e+02, 5.3041e+01, 1.5321e+03, 1.5018e+02, 8.6212e-01, 1.1000e+01]])"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
