removed uneccesary notebook form previous contributor.

--- a/hierarchical-classification.ipynb
+++ b/hierarchical-classification.ipynb
@@ -14,13 +14,15 @@
    "outputs": [],
    "source": [
     "from ultralytics import YOLO\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random\n",
-    "import os\n",
     "import pandas as pd\n",
-    "from anytree import Node, find_by_attr\n",
-    "from preprocessing import apply_mask_to_detected_object, \\\n",
-    "    find_best_ground_truth_match, get_taxonomy_hierarchy"
+    "import random\n",
+    "from anytree import Node\n",
+    "from preprocessing import *\n",
+    "import torch\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "# Set the random seed for reproducibility\n",
+    "random.seed(13384)"
    ]
   },
   {
@@ -36,8 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from anytree import Node\n",
-    "\n",
     "root = Node(\"object\", rank=\"root\")\n",
     "\n",
     "# Create root nodes\n",
@@ -96,9 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the random seed for reproducibility\n",
-    "random.seed(13384)\n",
-    "\n",
     "# Path to the image directory and model weights\n",
     "IMGDIR_PATH = \"/mnt/RAID/datasets/label-studio/fjord/images/\"\n",
     "MODEL_PATH = \"runs/segment/Yolov8n-seg-train/weights/best.pt\"\n",
@@ -112,21 +109,7 @@
     "        class_index_to_name[index] = class_name\n",
     "\n",
     "# Load the YOLO model\n",
-    "model = YOLO(MODEL_PATH)\n",
-    "\n",
-    "# Number of images to process in a batch\n",
-    "N = 100  # Adjust this number as needed\n",
-    "\n",
-    "# Randomly select N images from the directory\n",
-    "image_files = random.sample(os.listdir(IMGDIR_PATH), N)\n",
-    "image_paths = [os.path.join(IMGDIR_PATH, img) for img in image_files if img.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
-    "\n",
-    "# Ensure that we have N images, reduce if the directory has fewer images\n",
-    "image_paths = image_paths[:min(N, len(image_paths))]\n",
-    "\n",
-    "# Run the model on the batch of images\n",
-    "# Note: Depending on how YOLOv8 handles batch processing, you might need to adjust this part\n",
-    "results = model(image_paths, stream=True)"
+    "model = YOLO(MODEL_PATH)"
    ]
   },
   {
@@ -142,47 +125,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = []\n",
+    "import os\n",
+    "import random\n",
+    "from ultralytics import YOLO\n",
     "\n",
-    "for result in results:\n",
-    "    orig_img = result.orig_img\n",
-    "    img_shape = orig_img.shape\n",
+    "# Set paths and model\n",
+    "IMGDIR_PATH = \"/mnt/RAID/datasets/label-studio/fjord/images/\"\n",
+    "MODEL_PATH = \"runs/segment/Yolov8n-seg-train/weights/best.pt\"\n",
+    "model = YOLO(MODEL_PATH)\n",
     "\n",
-    "    if result.boxes is not None and result.masks is not None:\n",
-    "        for box, mask in zip(result.boxes, result.masks):\n",
-    "            masked_img = apply_mask_to_detected_object(orig_img, box, mask)\n",
-    "            conf = box.conf\n",
-    "            pred = box.cls\n",
+    "# Randomly select 11,000 images from the directory\n",
+    "total_images = 11000\n",
+    "image_files = random.sample(os.listdir(IMGDIR_PATH), total_images)\n",
+    "image_paths = [os.path.join(IMGDIR_PATH, img) for img in image_files if img.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
     "\n",
-    "            # Convert predicted mask to xyn format and find the best match\n",
-    "            predicted_mask_xyn = mask.xyn[0]\n",
-    "            best_class, best_iou = find_best_ground_truth_match(result, predicted_mask_xyn, img_shape)\n",
+    "# Split into training and testing sets\n",
+    "train_image_paths = image_paths[:10000]\n",
+    "test_image_paths = image_paths[10000:]\n",
     "\n",
-    "            # Handle the case when best_class is None\n",
-    "            if best_class is not None:\n",
-    "                species_name = class_index_to_name[best_class]\n",
-    "                taxon_node = find_by_attr(root, species_name)\n",
-    "            else:\n",
-    "                species_name = \"Unknown\"\n",
-    "                taxon_node = None\n",
+    "# Define a function to process and store batches of images\n",
+    "def process_and_store_batches(image_paths, batch_size, parquet_file_name, model):\n",
+    "    batch_data = []\n",
+    "    for batch_start in range(0, len(image_paths), batch_size):\n",
+    "        batch_end = min(batch_start + batch_size, len(image_paths))\n",
+    "        batch_results = model(image_paths[batch_start:batch_end], stream=True)\n",
     "\n",
-    "            # Store relevant data\n",
-    "            entry = {\n",
-    "                'masked_image': masked_img,\n",
-    "                'confidence': conf.item(),\n",
-    "                'iou_with_best_gt': best_iou,\n",
-    "                'predicted_species': class_index_to_name[int(pred.item())],\n",
-    "                'species': species_name\n",
-    "            }\n",
+    "        for result in batch_results:\n",
+    "            batch_data.extend(process_result(result, root, class_index_to_name))\n",
     "\n",
-    "            # Add taxonomy hierarchy to the entry\n",
-    "            if taxon_node:\n",
-    "                for ancestor in reversed(taxon_node.path):\n",
-    "                    entry[ancestor.rank] = ancestor.name\n",
+    "            if len(batch_data) >= batch_size:\n",
+    "                df_batch = pd.DataFrame(batch_data)\n",
+    "                append_to_parquet_file(df_batch, parquet_file_name)\n",
+    "                batch_data = []\n",
     "\n",
-    "            data.append(entry)\n",
-    "    else:\n",
-    "        print(\"No detections in this image.\")"
+    "        # Process and save any remaining results in the batch\n",
+    "        if batch_data:\n",
+    "            df_batch = pd.DataFrame(batch_data)\n",
+    "            append_to_parquet_file(df_batch, parquet_file_name)\n",
+    "\n",
+    "# Process training images\n",
+    "process_and_store_batches(train_image_paths, 500, 'train_dataset.parquet', model)\n",
+    "\n",
+    "# Process testing images\n",
+    "process_and_store_batches(test_image_paths, 500, 'test_dataset.parquet', model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pytorch Model"
    ]
   },
   {
@@ -191,25 +183,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(data[0]['masked_image'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
    ]
   }
  ],
