--- a/hierarchical-evaluation.ipynb
+++ b/hierarchical-evaluation.ipynb
@@ -21,9 +21,8 @@
     "import torch\n",
     "from anytree.importer import JsonImporter\n",
     "from preprocessing.preprocessing import load_ground_truth_mask_xyn, convert_polygon_to_mask, calculate_binary_mask_iou\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from itertools import islice\n",
+    "from utils.metrics import calculate_hierarchical_precision_recall, calculate_weighted_f1_score\n",
+    "torch.cuda.empty_cache()\n",
     "\n",
     "# Function to divide the data into chunks of size n\n",
     "def chunks(lst, n):\n",
@@ -61,92 +60,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_labels(image_path, label_path, class_index):\n",
-    "    # Load the image\n",
-    "    image = plt.imread(image_path)\n",
-    "    \n",
-    "    # Create a figure and axes\n",
-    "    fig, ax = plt.subplots()\n",
-    "    \n",
-    "    # Plot the image\n",
-    "    ax.imshow(image)\n",
-    "    \n",
-    "    # Read the label file\n",
-    "    with open(label_path, 'r') as file:\n",
-    "        # Loop through the lines in the label file\n",
-    "        for line in file:\n",
-    "            # Split the line into class_id and coordinates\n",
-    "            class_id, *coordinates = line.strip().split(' ')\n",
-    "            \n",
-    "            # Convert the coordinates to float and normalize them\n",
-    "            coordinates = [float(coord) for coord in coordinates]\n",
-    "            coordinates = [coord * image.shape[1] if i % 2 == 0 else coord * image.shape[0] for i, coord in enumerate(coordinates)]\n",
-    "            \n",
-    "            # Reshape the coordinates into an array of points for the polygon\n",
-    "            points = np.array(coordinates).reshape(-1, 2)\n",
-    "            \n",
-    "            # Get the class label from the class_index\n",
-    "            class_label = class_index[int(class_id)]\n",
-    "            \n",
-    "            # Get a unique color for each class\n",
-    "            color = plt.cm.tab10(int(class_id) % 10)\n",
-    "            \n",
-    "            # Plot the polygon with the class label and color\n",
-    "            polygon = plt.Polygon(points, edgecolor=color, facecolor='none')\n",
-    "            ax.add_patch(polygon)\n",
-    "            ax.text(points[0, 0], points[0, 1], class_label, color=color, fontsize=8, verticalalignment='top')\n",
-    "    \n",
-    "    # Show the plot\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def plot_masks(image, masks, classes):\n",
-    "    # Create a figure and axes\n",
-    "    fig, ax = plt.subplots()\n",
-    "    \n",
-    "    # Plot the image\n",
-    "    ax.imshow(image)\n",
-    "    \n",
-    "    # Loop through the masks and coordinates\n",
-    "    for mask, cls in zip(masks, classes):    \n",
-    "        mask[:, 0] = mask[:, 0] * image.shape[1]\n",
-    "        mask[:, 1] = mask[:, 1] * image.shape[0]    \n",
-    "        points = mask\n",
-    "\n",
-    "        # Get the class label from the class_index\n",
-    "        class_label = species_names[int(cls)]\n",
-    "        \n",
-    "        # Get a unique color for each class\n",
-    "        color = plt.cm.tab10(int(cls) % 10)\n",
-    "        \n",
-    "        # Plot the polygon with the class label and color\n",
-    "        polygon = plt.Polygon(points, edgecolor=color, facecolor='none')\n",
-    "        ax.add_patch(polygon)\n",
-    "        ax.text(points[0, 0], points[0, 1], class_label, color=color, fontsize=8, verticalalignment='top')\n",
-    "    \n",
-    "    # Show the plot\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Construct Probability Tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +75,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training Loop"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,9 +145,9 @@
     "        class_name = line.strip()\n",
     "        class_index.append(class_name)\n",
     "\n",
-    "\n",
     "Y = []\n",
     "Yhat = []\n",
+    "confidences = []\n",
     "batch_size = 50\n",
     "\n",
     "# Loop through batches of images\n",
@@ -246,7 +172,8 @@
     "            GT = load_ground_truth_mask_xyn(label_file_path)\n",
     "            visited = len(GT)*[None]\n",
     "\n",
-    "            for cls, mask in zip(prediction.boxes.cls, prediction.masks.xyn):\n",
+    "            for cls, mask, conf in zip(prediction.boxes.cls, prediction.masks.xyn, prediction.boxes.conf):\n",
+    "                confidences.append(conf.item())\n",
     "                m = convert_polygon_to_mask(mask, shape)\n",
     "                best_iou = 0\n",
     "\n",
@@ -277,8 +204,86 @@
     "                    Y.append(GT[idx][0])\n",
     "                    Yhat.append(None)\n",
     "\n",
-    "    # After processing each batch, clear unused memory from CUDA\n",
-    "    torch.cuda.empty_cache()\n"
+    "    # After processing each batch, clear unusPolitisk likheited memory from CUDA\n",
+    "    torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate weighted precision, recall, and F1\n",
+    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, root, species_names)\n",
+    "weighted_f1_score = calculate_weighted_f1_score(precision, recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9588657803141181"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8972809667673716"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9270517169110761"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_f1_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Update Predictions with uniform probability tree"
    ]
   },
   {
@@ -290,35 +295,54 @@
     "from anytree.search import find\n",
     "from anytree.walker import Walker\n",
     "\n",
-    "def hierarchical_similarity(node1, node2, tree):\n",
+    "def hierarchical_similarity(node1, node2):\n",
     "    walker = Walker()\n",
     "    # Assuming node1 and node2 are already the correct nodes from the tree\n",
     "    upwards, _, down = walker.walk(node1, node2)\n",
     "    distance = len(upwards) + len(down)\n",
+    "\n",
     "    return 1 / (1 + distance)\n",
     "\n",
-    "def calculate_hierarchical_precision_recall(Y, Yhat, tree, species_names):\n",
+    "def calculate_hierarchical_precision_recall(Y, Yhat, tree, confidences, threshold=0.8):\n",
     "    weighted_true_positives = 0\n",
     "    weighted_false_positives = 0\n",
     "    weighted_false_negatives = 0\n",
-    "\n",
-    "    for true_label, predicted_label in zip(Y, Yhat):\n",
-    "\n",
+    "    taxonomies = [species_names, genus_names, class_names, binary_names]\n",
+    "    \n",
+    "    for true_label, predicted_label, conf in zip(Y, Yhat, confidences):\n",
     "        if predicted_label is None:  # Handle negative prediction as complete miss\n",
-    "            weighted_false_negatives += 1  # Might need to adjust based on how you want to treat negative predictions\n",
+    "            weighted_false_negatives += 1\n",
     "            continue\n",
     "        if true_label is None:  # Handle missing ground truth as complete miss\n",
     "            weighted_false_positives += 1\n",
     "            continue\n",
     "\n",
-    "        node1 = find(tree, lambda node: node.name == species_names[true_label])\n",
-    "        node2 = find(tree, lambda node: node.name == species_names[predicted_label])\n",
-    "        similarity_weight = hierarchical_similarity(node1, node2, tree)\n",
+    "        current_taxonomy = 0\n",
+    "        node = find(tree.root, lambda node: node.name == taxonomies[current_taxonomy][predicted_label])\n",
+    "        while conf < threshold and current_taxonomy < len(taxonomies) - 1:\n",
+    "            # Move up the taxonomy if the confidence is below the threshold\n",
+    "            if node.parent is not None:\n",
+    "                node = node.parent\n",
+    "                current_taxonomy += 1\n",
+    "                # Attempt to find the new predicted_label index in the parent taxonomy\n",
+    "                try:\n",
+    "                    predicted_label = taxonomies[current_taxonomy].index(node.name)\n",
+    "                except ValueError:\n",
+    "                    # If the node's name is not in the taxonomy, break from the loop\n",
+    "                    break\n",
+    "                conf += tree.sum_siblings_probabilities(node.name)\n",
+    "            else:\n",
+    "                break  # If there's no parent, we're at the root and cannot go up further\n",
+    "\n",
+    "        # At this point, node represents the current predicted label node\n",
+    "        node1 = node\n",
+    "        node2 = find(tree.root, lambda node: node.name == taxonomies[0][true_label])\n",
+    "        similarity_weight = hierarchical_similarity(node1, node2)\n",
     "\n",
     "        if true_label == predicted_label:\n",
     "            weighted_true_positives += similarity_weight\n",
     "        else:\n",
-    "            weighted_false_positives += (1 - similarity_weight)  # This assumes you want to penalize based on dissimilarity\n",
+    "            weighted_false_positives += (1 - similarity_weight)  # Penalize based on dissimilarity\n",
     "\n",
     "    precision = weighted_true_positives / (weighted_true_positives + weighted_false_positives) if (weighted_true_positives + weighted_false_positives) > 0 else 0\n",
     "    recall = weighted_true_positives / (weighted_true_positives + weighted_false_negatives) if (weighted_true_positives + weighted_false_negatives) > 0 else 0\n",
@@ -331,7 +355,7 @@
     "    return 2 * (precision * recall) / (precision + recall)\n",
     "\n",
     "# Calculate weighted precision, recall, and F1\n",
-    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, root, species_names)\n",
+    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, prob_tree, confidences, threshold=0.2)\n",
     "weighted_f1_score = calculate_weighted_f1_score(precision, recall)"
    ]
   },
@@ -343,7 +367,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9588657803141181"
+       "0.9590961757352848"
       ]
      },
      "execution_count": 10,
@@ -363,7 +387,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8972809667673716"
+       "0.8988274706867672"
       ]
      },
      "execution_count": 11,
@@ -383,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9270517169110761"
+       "0.9279843027366996"
       ]
      },
      "execution_count": 12,
@@ -393,6 +417,67 @@
    ],
    "source": [
     "weighted_f1_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict Using Probability Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 1321,\n",
+       " 1: 1399,\n",
+       " 2: 2324,\n",
+       " 3: 1210,\n",
+       " 4: 3098,\n",
+       " 5: 1376,\n",
+       " 6: 1519,\n",
+       " 7: 1081,\n",
+       " 8: 1292,\n",
+       " 9: 2113,\n",
+       " 10: 1202,\n",
+       " 11: 3314,\n",
+       " 12: 4837}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_folder_path = '/mnt/RAID/datasets/The Fjord Dataset/fjord/labels/train/'\n",
+    "frames = os.listdir(label_folder_path)\n",
+    "label_files_full_path = [label_folder_path + f for f in frames]\n",
+    "\n",
+    "class_indexes = []\n",
+    "\n",
+    "for label_file in label_files_full_path:\n",
+    "    with open(label_file, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        for line in lines:\n",
+    "            if line.strip():\n",
+    "                class_index = int(line.split()[0])\n",
+    "                class_indexes.append(class_index)\n",
+    "\n",
+    "class_index_counts = {}\n",
+    "for class_index in class_indexes:\n",
+    "    if class_index in class_index_counts:\n",
+    "        class_index_counts[class_index] += 1\n",
+    "    else:\n",
+    "        class_index_counts[class_index] = 1\n",
+    "\n",
+    "sorted_class_index_counts = dict(sorted(class_index_counts.items()))\n",
+    "sorted_class_index_counts"
    ]
   }
  ],
