work in progress.

--- a/hierarchical-evaluation-coco.ipynb
+++ b/hierarchical-evaluation-coco.ipynb
@@ -37,7 +37,7 @@
     "with open('data/coco.json', 'r') as f:\n",
     "    root = importer.read(f)\n",
     "\n",
-    "classes_file = '/mnt/RAID/datasets/COCO/classes.txt'\n",
+    "classes_file = '/mnt/RAID/datasets/coco/classes.txt'\n",
     "\n",
     "cls_names = []\n",
     "with open(classes_file, 'r') as file:\n",
@@ -53,6 +53,26 @@
     "        root_names.append(node.name)\n",
     "\n",
     "taxonomies = [cls_names, subcat_names, cat_names, root_names]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_names"
    ]
   },
   {
