increased kernel size and lowered reduction factor.

--- a/hierarcical-cnn-visualisation.ipynb
+++ b/hierarcical-cnn-visualisation.ipynb
@@ -267,9 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score for binary: 0.6612\n",
+      "F1 Score for class: 0.8799\n",
+      "F1 Score for genus: 0.9157\n",
+      "F1 Score for species: 0.9207\n"
+     ]
+    }
+   ],
    "source": [
     "f1_scores = {}\n",
     "for level in ['binary', 'class', 'genus', 'species']:\n",
@@ -279,9 +290,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score for binary: 0.6608\n",
+      "F1 Score for class: 0.8810\n",
+      "F1 Score for genus: 0.9151\n",
+      "F1 Score for species: 0.9205\n"
+     ]
+    }
+   ],
    "source": [
     "f1_scores = {}\n",
     "for level in ['binary', 'class', 'genus', 'species']:\n",
